--- a/simulator.html
+++ b/simulator.html
@@ -56,7 +56,16 @@
             <a href="index.html" class="logo">First Principle</a>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
-                <li><a href="product.html">Strategy</a></li>
+                <li class="nav-item-with-dropdown">
+                    <a href="product.html">Strategy</a>
+                    <ul class="nav-dropdown">
+                        <li><a href="product.html#core-strategies">Core Strategies</a></li>
+                        <li><a href="product.html#portfolio-optimization">Portfolio Optimization</a></li>
+                        <li><a href="product.html#first-principle-framework">The First Principle Framework</a></li>
+                        <li><a href="product.html#behavior-across-markets">Behavior Across Markets</a></li>
+                        <li><a href="product.html#implementation-for-advisors">Implementation for Advisors</a></li>
+                    </ul>
+                </li>
                 <li><a href="simulator.html">Portfolio Simulator</a></li>
                 <li><a href="resources.html">Resources</a></li>
                 <li><a href="contact.html">Contact</a></li>
