--- a/about.html
+++ b/about.html
@@ -60,17 +60,9 @@
             border-radius: 0;
         }
 
-        /* Individual image positioning for proper framing */
-        .team-panel-clickable[data-bio="habitz"] .avatar-new img {
-            object-position: center 35%;
-        }
-
-        .team-panel-clickable[data-bio="bower"] .avatar-new img {
-            object-position: center 30%;
-        }
-
-        .team-panel-clickable[data-bio="mckenna"] .avatar-new img {
-            object-position: center 40%;
+        /* Consistent image positioning for all leadership photos */
+        .avatar-new img {
+            object-position: center center;
         }
 
         .team-panel-clickable:hover .avatar-new img {
@@ -359,7 +351,7 @@
                     </div>
                     <div class="team-panel-clickable fade-on-scroll delay-2" data-bio="mckenna">
                         <div class="avatar-new">
-                            <img src="mckenna.jpg" alt="Colleen T. McKenna">
+                            <img src="CMHeadshot.jpg" alt="Colleen T. McKenna">
                         </div>
                         <div class="team-info-box">
                             <h3 class="team-name">Colleen T. McKenna</h3>
