--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="new-approach-points">
                                 <div class="approach-point">
                                     <div class="approach-point-icon">
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="3" y="3" width="18" height="18" rx="2" stroke="#C8A678" stroke-width="1.5" fill="none"/>
                                             <path d="M6 18L10 12L14 14L18 6" stroke="#C8A678" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>
@@ -79,7 +79,7 @@
                                 </div>
                                 <div class="approach-point">
                                     <div class="approach-point-icon">
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M6 12L8 8L10 14L12 6L14 10L16 4L18 12" stroke="#C8A678" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M6 12L18 12" stroke="#C8A678" stroke-width="1" stroke-dasharray="2 2" opacity="0.5"/>
                                         </svg>
@@ -88,10 +88,9 @@
                                 </div>
                                 <div class="approach-point">
                                     <div class="approach-point-icon">
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <circle cx="12" cy="12" r="8" stroke="#C8A678" stroke-width="1.5" fill="none"/>
-                                            <path d="M8 12L10 10L12 12L14 10L16 12" stroke="#C8A678" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                                            <circle cx="12" cy="12" r="1.5" fill="#C8A678"/>
+                                        <svg width="36" height="36" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="12" cy="12" r="10" stroke="#C8A678" stroke-width="1.5" fill="none"/>
+                                            <path d="M2 12h20M12 2a15.3 15.3 0 0 0-4 10 15.3 15.3 0 0 0 4 10 15.3 15.3 0 0 0 4-10 15.3 15.3 0 0 0-4-10" stroke="#C8A678" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>
                                     </div>
                                     <p class="approach-point-text">Traditional 60/40 portfolios face compressed return expectations, higher cross-asset correlation, and less reliable diversification.</p>
