Select Your Path Update

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <!-- INVESTOR TYPE GATE MODAL -->
     <div id="investor-gate-modal">
         <div class="investor-gate-content">
-            <h1 class="investor-gate-title">Who are you investing for?</h1>
+            <h1 class="investor-gate-title">Select your path</h1>
             <p class="investor-gate-subtitle">
-                First Principle offers tailored experiences for individual investors and institutional allocators. Select your path to continue.
+                First Principle offers tailored experiences for individual investors and institutional allocators.
             </p>
             <div class="investor-gate-buttons">
                 <button id="investor-gate-retail" class="investor-gate-button">Individual Investor</button>
